--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
+<!-- puedo hacer un if y evaluar error.status que error tiene y tirar un mensaje -->
