--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <%- include('./partials/nav') %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <img src="/images/gatito.jpg" alt="#">
   </body>
 </html>
