--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,13 @@
 <nav>
-    <ul>
-        <li>
-            <a href="../">home</a>
+    <ul class="nav">
+        <li class="nav-item">
+            <a href="../" class="nav-item-link" >home</a>
         </li>
-        <li>
-            <a href="/nosotros">nosotros</a>
+        <li class="nav-item">
+            <a href="/nosotros" class="nav-item-link" >nosotros</a>
         </li>
-        <li>
-            <a href="/contacto">contacto</a>
+        <li class="nav-item">
+            <a href="/contacto" class="nav-item-link" >contacto</a>
         </li>
     </ul>
 </nav>
