creamos un findByPk para libros y cambie idioma paginas

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,19 @@
 <nav>
     <ul class="nav">
         <li class="nav-item">
-            <a href="../" class="nav-item-link" >home</a>
+            <a href="../" class="nav-item-link" >Home</a>
         </li>
         <li class="nav-item">
-            <a href="/nosotros" class="nav-item-link" >nosotros</a>
+            <a href="/us" class="nav-item-link" >Us</a>
         </li>
         <li class="nav-item">
-            <a href="/contacto" class="nav-item-link" >contacto</a>
+            <a href="/contact" class="nav-item-link" >Contact</a>
+        </li>
+        <li class="nav-item">
+            <a href="/authors" class="nav-item-link" >Authors</a>
+        </li>
+        <li class="nav-item">
+            <a href="/books" class="nav-item-link" >Books</a>
         </li>
     </ul>
 </nav>
