--- a/views/pages/book.ejs
+++ b/views/pages/book.ejs
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nosotros</title>
+    <title>BOOK</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
 </head>
 <body>
-    <h1>estas en nosotros</h1>
     <%- include('../partials/nav')%>
+    <hr>
+    <h1>Title: <%= libro.titulo %> - Author: <%= libro.autor.nombreCompleto %></h1>
+    <p>Price: $<%= libro.precio %></p>
 </body>
 </html>
