--- a/views/pages/us.ejs
+++ b/views/pages/us.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>libros</title>
+    <title>US</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
 </head>
 <body>
-    <h1>estas en libros</h1>
+    <h1>About us</h1>
     <%- include('../partials/nav')%>
 </body>
 </html>
