--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,16 +4,24 @@
             <a href="../" class="nav-item-link" >Home</a>
         </li>
         <li class="nav-item">
-            <a href="/us" class="nav-item-link" >Us</a>
+            <a href="us" class="nav-item-link" >Us</a>
         </li>
         <li class="nav-item">
-            <a href="/contact" class="nav-item-link" >Contact</a>
+            <a href="contact" class="nav-item-link" >Contact</a>
         </li>
         <li class="nav-item">
-            <a href="/authors" class="nav-item-link" >Authors</a>
+            <a href="authors" class="nav-item-link" >Authors</a>
         </li>
         <li class="nav-item">
-            <a href="/books" class="nav-item-link" >Books</a>
+            <a href="books" class="nav-item-link" >Books</a>
+        </li>
+        <li class="nav-item">
+            <form action="search" method="GET">
+<!-- en la URL se verá como: "search?query=algo" porque name=query y es de tipo "search"-->
+<!-- name podría haber sido "libro" o "autor" etc. -->
+                <input type="search" name="zapato">
+               <input type="submit" value="search">
+            </form>
         </li>
     </ul>
 </nav>
