creamos Add.ejs pero sin su appi

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,6 +16,9 @@
             <a href="books" class="nav-item-link" >Books</a>
         </li>
         <li class="nav-item">
+            <a href="add" class="nav-item-link" >Add</a>
+        </li>
+        <li class="nav-item">
             <form action="search" method="GET">
 <!-- en la URL se verá como: "search?query=algo" porque name=query y es de tipo "search"-->
 <!-- name podría haber sido "libro" o "autor" etc. -->
