--- a/views/pages/add.ejs
+++ b/views/pages/add.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEARCH</title>
+    <title><%=titulo%></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
 </head>
 <body>
-    
-    <%- include('../partials/nav')%>
-    
+        <%- include('../partials/nav')%>
+        <hr>
+        <h1>You are <%=titulo%>ing a book</h1>
 </body>
 </html>
