--- a/views/pages/books.ejs
+++ b/views/pages/books.ejs
@@ -17,7 +17,7 @@
             %>
             <li class="list-item">
 <!-- hacemos que el link con el que viajen, contenga ID libro  -->
-                <a href="/book/<%= book.id %>"> 
+                <a href="book/<%= book.id %>"> 
                     <%= book.titulo %>
                 </a>
             </li>
