--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -20,9 +20,9 @@
         </li>
         <li class="nav-item">
             <form action="search" method="GET">
-<!-- en la URL se verá como: "search?query=algo" porque name=query y es de tipo "search"-->
-<!-- name podría haber sido "libro" o "autor" etc. -->
-                <input type="search" name="zapato">
+<!-- en la URL se verá como: "search?q=algo" porque name=q y es de tipo "search"-->
+<!-- es la name de la query, podría haber sido "libro" o "autor" etc. -->
+                <input type="search" name="q">
                <input type="submit" value="search">
             </form>
         </li>
