--- a/views/pages/book.ejs
+++ b/views/pages/book.ejs
@@ -13,6 +13,6 @@
     <hr>
     <h1>Title: <%= libro.titulo %> - Author: <%= libro.autor.nombreCompleto %></h1>
     <p>Price: $<%= libro.precio %></p>
-    <img src="<%= libro.portada %>" alt="">
+    <img src="<%= libro.portada %>" alt="can't load image cover">
 </body>
 </html>
