algunas notas, preparando para agregar algun addEventListener sobre algun boton

--- a/views/pages/add.ejs
+++ b/views/pages/add.ejs
@@ -35,8 +35,7 @@
                 Cover:
                 <input type="text" name="cover">
             </label>
-            <input type="submit" value="Add book">
+            <input type="submit" value="Add book" id="boton">
         </form>
-        
-</body>
+    </body>
 </html>
