--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,6 +19,7 @@
             <a href="add" class="nav-item-link" >Add</a>
         </li>
         <li class="nav-item">
+            <!-- "search" debe ser una ruta en index.js -->
             <form action="search" method="GET">
 <!-- en la URL se verá como: "search?q=algo" porque name=q y es de tipo "search"-->
 <!-- es la name de la query, podría haber sido "libro" o "autor" etc. -->
