mejoré addbook, creé deletebook

--- a/views/pages/add.ejs
+++ b/views/pages/add.ejs
@@ -12,6 +12,7 @@
         <%- include('../partials/nav')%>
         <hr>
         <h1>You are <%=titulo%>ing a book</h1>
+<!-- la ruta se llamará /add_process, método POST. -->
         <form action="add_process" method="POST">
             <label>
                 Title:
