--- a/views/pages/books.ejs
+++ b/views/pages/books.ejs
@@ -22,6 +22,9 @@
                 </a> - 
                 <a href="#"> 
                     <%= book.autor.nombreCompleto %>
+                </a> -
+                <a href="delete-book/<%= book.id %>"> 
+                    DELETE
                 </a>
             </li>
         <% }) %>
