deleted code not used

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     
-    <!-- la imagen está dentro de /public/iamges pero se renderiza sin el "/public" -->
+    <!-- la imagen está dentro de /public/iamges pero se escribe sin el "/public" -->
     <img src="/images/gatito.jpg" alt="#">
   </body>
 </html>
